--- a/_config.yaml
+++ b/_config.yaml
@@ -1,7 +1,7 @@
 ### basic settings
 
 # site properties and page defaults
-title: Welcome to our Website
+title: Computational Social Listening Lab | UPenn
 description: We develop computational models utilizing large-scale user-generated text, image, and mobile sensor data to answer questions pertaining to geospatial, cross-cultural, and temporal aspects of human behavior. My recent work investigates the manifestation of conditions such as loneliness, ADHD, stress, and depression on social media platforms and the role of heterogeneity in the digital behaviors of individuals across cultures.
 logo: images/logo.svg
 header: images/background.jpg
